--- a/后端/工具类.md
+++ b/后端/工具类.md
@@ -287,6 +287,138 @@ cell.setCellType(HSSFCell.CELL_TYPE_STRING)
 
 略
 
+#### 常用方法
+
+```java
+// 克隆sheet页, 参数为要克隆sheet页下标
+workBook.cloneSheet(位置);
+```
+
+#### 表格样式
+
+##### 列宽
+
+```java
+// 设置默认列宽，width为字符个数
+sheet.setDefaultColumnWidth(int width)
+// 设置第columnIndex+1列的列宽，单位为字符宽度的1/256
+sheet.setColumnWidth(int columnIndex, int width)
+// 设置第5列的列宽为20个字符宽度
+sheet.setColumnWidth(4, 20*256)
+```
+
+##### 单元格样式
+
+###### 合并单元格
+
+```java
+// 先创建一个虚拟的合并的单元格
+CellRangeAddress region=new CellRangeAddress(起始行,结束行,起始列,结束列);
+sheet.addMergedRegion(region);
+// 然后创建该合并单元格所在位置的真实单元格
+// row为合并的单元格所在行, index是起始位置 
+row.createCell(index);
+```
+
+###### 背景色
+
+```java
+XSSFCellStyle style1 = wb.createCellStyle();
+// 填充方式
+cellStyle.setFillPattern(HSSFCellStyle.SOLID_FOREGROUND);
+// 通过poi的颜色枚举类, 设置颜色, 颜色少, 但是功能正常.
+cellStyle.setFillForegroundColor(IndexedColors.WHITE.getIndex());
+// 自定义颜色, 不好使, 暂未解决
+style1.setFillForegroundColor(new XSSFColor(new java.awt.Color(128, 0, 128)));
+style1.setFillPattern(CellStyle.SOLID_FOREGROUND);
+```
+
+###### 边框
+
+```java
+cellStyle.setBorderBottom(HSSFCellStyle.BORDER_DOTTED);//下边框        
+cellStyle.setBorderLeft(HSSFCellStyle.BORDER_DOTTED);//左边框        
+cellStyle.setBorderRight(HSSFCellStyle.BORDER_THIN);//右边框        
+cellStyle.setBorderTop(HSSFCellStyle.BORDER_THIN);//上边框   
+```
+
+###### 字体
+
+```java
+XSSFFont font = wb.createFont();
+// 字体
+font.setFontName("宋体");
+// 大小
+font.setFontHeightInPoints((short) 11);
+// 粗细
+font.setBoldweight(HSSFFont.BOLDWEIGHT_BOLD);
+cellStyle.setFont(font);
+```
+
+###### 居中
+
+```java
+cellStyle.setAlignment(HSSFCellStyle.ALIGN_CENTER);//水平居中
+cellStyle.setVerticalAlignment(HSSFCellStyle.VERTICAL_CENTER);//垂直居中
+```
+
+#### 导出
+
+##### 前端
+
+```js
+var form = $("<form>");
+form.attr("style","display:none");
+form.attr("target","");
+form.attr("method","post");
+// 调用的导出接口
+form.attr("action","OrderAnalysisController.do?exportvDefault2_0");
+// 传递的参数
+var input1 = $("<input>");
+input1.attr("type","hidden");
+input1.attr("name","ouCode");
+input1.attr("value",orgNo);
+
+var input2 = $("<input>");
+input2.attr("type","hidden");
+input2.attr("name","startTime");
+input2.attr("value",startTime);
+
+var input3 = $("<input>");
+input3.attr("type","hidden");
+input3.attr("name","endTime");
+input3.attr("value",endTime);
+$("body").append(form);
+form.append(input1);
+form.append(input2);
+form.append(input3);
+// 提交
+form.submit();
+form.remove();
+```
+
+
+
+##### 后端
+
+```java
+response.reset();
+response.setContentType("application/octet-stream;charset=utf-8");
+try {
+	response.setHeader("content-disposition", "attachment;filename=".concat("导出的文件名", "UTF-8"))));
+    workBook.write(response.getOutputStream());
+    response.getOutputStream().flush();
+    if(response.getOutputStream()!=null){
+        response.getOutputStream().close();
+    }
+} catch (IOException e) {
+    log.error("订单统计导出失败");
+    log.error(e.getMessage());
+}
+```
+
+
+
 ## easyExcel
 
 ### 添加依赖
