--- a/后端/设计模式.md
+++ b/后端/设计模式.md
@@ -2,7 +2,7 @@
 
 ## 工厂模式
 
-### 接口
+**接口**
 
 ```java
 // 接口
@@ -11,7 +11,7 @@ interface Phone{
 }
 ```
 
-### 接口实现类
+**接口实现类**
 
 ```java
 // 接口不同的实现类
@@ -29,7 +29,7 @@ class Iphone implements Phone{
 }
 ```
 
-### 工厂
+**工厂**
 
 ```java
 // 工厂通过不同的参数, 创建不同的实现类
@@ -45,7 +45,7 @@ class PhoneFactory{
 }
 ```
 
-### 测试
+**测试**
 
 ```java
 public class Main {
@@ -58,7 +58,7 @@ public class Main {
 
 ## 抽象工厂模式
 
-### 接口
+**接口**
 
 ```java
 interface Computer{
@@ -69,7 +69,7 @@ interface Phone{
 }
 ```
 
-### 实现类
+**实现类**
 
 ```java
 class PhoneApple implements Phone{
@@ -103,7 +103,7 @@ class ComputerHuaWei implements Computer{
 }
 ```
 
-### 抽象工厂
+**抽象工厂**
 
 ```java
 public abstract class AbstractFactory {
@@ -112,7 +112,7 @@ public abstract class AbstractFactory {
 }
 ```
 
-### 实现工厂
+**实现工厂**
 
 ```java
 class PhoneFactory extends AbstractFactory{
@@ -150,7 +150,7 @@ class ComputerFactory extends AbstractFactory{
 }
 ```
 
-### 测试
+**测试**
 
 ```java
 public class Main {
@@ -257,7 +257,7 @@ public class Lock2Singleton {
 
 ## 建造者模式
 
-### 实体类
+**实体类**
 
 ```java
 public class Computer {
@@ -301,7 +301,7 @@ public class Computer {
 }
 ```
 
-### 抽象接口
+**抽象接口**
 
 ```java
 public interface ComputerBuilder {
@@ -312,7 +312,7 @@ public interface ComputerBuilder {
 }
 ```
 
-### 实现类
+**实现类**
 
 ```java
 public class ComputerConcreteBuilder implements ComputerBuilder {
@@ -348,7 +348,7 @@ public class ComputerConcreteBuilder implements ComputerBuilder {
 }
 ```
 
-### 构建使用builder接口得对象
+**构建使用builder接口得对象**
 
 ```java
 public class ComputerDirector {
@@ -361,7 +361,7 @@ public class ComputerDirector {
 }
 ```
 
-### 主类
+**主类**
 
 ```java
 public class Main {
@@ -377,6 +377,623 @@ public class Main {
 }
 ```
 
+## 原型模式
+
+### 浅拷贝
+
+不拷贝引用类型
+
+```java
+public class Computer implements Cloneable {
+    private String cpu;
+    private String memory;
+    private String disk;
+    
+    public Computer(String cpu, String memory, String disk) {
+        this.cpu = cpu;
+        this.memory = memory;
+        this.disk = disk;
+    }
+    
+    
+    @Override
+    public Computer clone() {
+        try {
+            return (Computer) super.clone();
+        } catch (CloneNotSupportedException e) {
+            e.printStackTrace();
+            return null;
+        }
+        
+    }
+}
+```
+
+### 深拷贝
+
+拷贝引用类型
+
+```java
+public class ComputerDetail implements Cloneable {
+    private String cpu;
+    private String memory;
+    private Disk disk;
+
+    public ComputerDetail(String cpu, String memory, Disk disk) {
+        this.cpu = cpu;
+        this.memory = memory;
+        this.disk = disk;
+    }
+
+
+    @Override
+    public Object clone() {
+        try {
+            ComputerDetail computerDetail = (ComputerDetail) super.clone();
+            // 将对象属性, 再次执行浅拷贝
+            computerDetail.disk = (Disk)this.disk.clone();
+            return computerDetail;
+        } catch (CloneNotSupportedException e) {
+            e.printStackTrace();
+            return null;
+        }
+
+    }
+
+    @Override
+    public String toString() {
+        return "ComputerDetail{" +
+                "cpu='" + cpu + '\'' +
+                ", memory='" + memory + '\'' +
+                ", disk=" + disk.toString() +
+                '}';
+    }
+}
+
+
+class Disk implements Cloneable {
+    private String ssd;
+    private String hhd;
+
+    public Disk(String ssd, String hhd){
+        this.ssd = ssd;
+        this.hhd = hhd;
+    }
+
+    @Override
+    public Object clone() {
+        try {
+            return (Disk) super.clone();
+        } catch (CloneNotSupportedException e) {
+            e.printStackTrace();
+            return null;
+        }
+
+    }
+
+    @Override
+    public String toString() {
+        return "Disk{" +
+                "ssd='" + ssd + '\'' +
+                ", hhd='" + hhd + '\'' +
+                '}';
+    }
+}
+```
+
 # 结构型模式
+
+## 适配器模式
+
+### 类适配器模式(不推荐)
+
+在需要不改变（或者由于项目原因无法改变）原有接口或类结构的情况下扩展类的功能以适配不同的接口时，可以使用类的适配器模式。适配器模式通过创建一个继承原有类（需要扩展的类）并实现新接口的适配器类来实现
+
+#### 原有类
+
+```java
+public class Source {
+    public void eidtTextFile(){
+        System.out.println("文本编辑");
+    }
+}
+```
+
+#### 扩展接口
+
+```java
+public interface Targetable {
+    // 原有的接口
+    void editTextFile();
+    // 扩展的接口
+    void editWordFile();
+}
+```
+
+#### 适配器
+
+```java
+public class Adapter extends Source implements Targetable {
+    @Override
+    public void editTextFile() {
+        System.out.println("文本编辑");
+    }
+    @Override
+    public void editWordFile() {
+        System.out.println("单词编辑");
+    }
+}
+```
+
+#### 主类
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Targetable targetable = new Adapter();
+        targetable.editTextFile();
+        targetable.editWordFile();
+    }
+}
+```
+
+### 对象适配器模式
+
+对象适配器模式的思路和类适配器模式基本相同，只是修改了Adapter类。Adapter不再继承Source类，而是持有Source类的实例，以解决兼容性问题。
+
+#### 适配器
+
+```java
+public class ObjectAdapter implements Targetable {
+
+    private Source source;
+
+    public ObjectAdapter(Source source){
+        this.source = source;
+    }
+	
+    // 原始的方法中,  使用原始类的对象调用
+    @Override
+    public void editTextFile() {
+        this.source.eidtTextFile();
+    }
+
+    @Override
+    public void editWordFile() {
+        System.out.println("单词编辑");
+    }
+}
+```
+
+#### 主类
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Source source = new Source();
+        Targetable targetable = new ObjectAdapter(source);
+        targetable.editTextFile();
+        targetable.editWordFile();
+    }
+}
+```
+
+### 接口适配器模式
+
+在不希望实现一个接口中所有的方法时，可以创建一个抽象类AbstractAdapter实现所有方法，在使用时继承该抽象类按需实现方法即可
+
+#### 抽象适配器
+
+抽象适配器, 实现接口的全部方法, 但是不写具体的实现
+
+```java
+public abstract class AbstaractAdapter implements Targetable {
+    @Override
+    public void editTextFile() {}
+
+    @Override
+    public void editWordFile() {}
+}
+```
+
+#### 具象适配器
+
+继承抽象适配器, 仅重写,需要使用的方法
+
+```java
+public class SourceSub1 extends AbstaractAdapter {
+    @Override
+    public void editTextFile() {
+        System.out.println("文本编辑");
+    }
+}
+```
+
+```java
+public class SourceSub2 extends AbstaractAdapter {
+    @Override
+    public void editWordFile() {
+        System.out.println("单词编辑");
+    }
+}
+```
+
+#### 主类
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Targetable targetable1 = new SourceSub1();
+        Targetable targetable2 = new SourceSub2();
+        targetable1.editTextFile();
+        targetable2.editWordFile();
+    }
+}
+```
+
+## 装饰者模式
+
+装饰者模式（Decorator Pattern）指在无须改变原有类及类的继承关系的情况下，动态扩展一个类的功能。它通过装饰者来包裹真实的对象，并动态地向对象添加或者撤销功能。
+
+与适配器模式的区别是,  适配器模式是扩展一个类的方法, 而装饰者模式是包装改造被装饰的方法
+
+**接口**
+
+```java
+public interface Sourceable {
+    void createComputer();
+}
+```
+
+**实现类**
+
+```java
+public class Source implements Sourceable {
+
+    @Override
+    public void createComputer() {
+        System.out.println("创建一个电脑");
+    }
+}
+```
+
+**装饰器**
+
+装饰器与被装饰得对象实现相同得接口, 装饰器得构造函数, 传入被装饰得对象, 装饰器实现得方法中, 通过传入得对象调用被装饰的类的方法. 
+
+```java
+public class Decorator implements Sourceable{
+
+    private Sourceable sourceable;
+
+    public Decorator(Sourceable sourceable){
+        this.sourceable = sourceable;
+    }
+
+    @Override
+    public void createComputer() {
+        sourceable.createComputer();
+        System.out.println("装系统");
+    }
+}
+```
+
+**主类**
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Sourceable sourceable = new Source();
+        Sourceable obj = new Decorator(sourceable);
+        obj.createComputer();
+    }
+}
+```
+
+## 代理模式
+
+代理类和被代理类实现相同的接口,  创建代理对象时, 在代理类的构造方法中, 创建被代理类的对象, 在代理方法中, 使用被代理的对象调用原方法
+
+代理模式与装饰者模式的区别:  代理模式是自己初始化被代理的对象, 装饰者模式是传入被装饰的对象, 代理模式可以隐藏被代理对象的细节
+
+**接口**
+
+```java
+public interface Company {
+    void findWorker(String title);
+}
+```
+
+**实现类**
+
+```java
+public class HR implements Company {
+
+    @Override
+    public void findWorker(String title) {
+        System.out.println("招聘"+ title);
+    }
+}
+```
+
+**代理类**
+
+```java
+public class Proxy implements Company {
+
+    private HR hr;
+    public Proxy(){
+        this.hr = new HR();
+    }
+
+
+    @Override
+    public void findWorker(String title) {
+        hr.findWorker(title);
+        String worker = getWorker(title);
+        System.out.println(worker);
+    }
+
+    private String getWorker(String title){
+        Map<String, String> workerList = new HashMap<String, String>(){
+            {
+                put("java", "老王");
+                put("python", "老六");
+                put("ruby", "哈哈");
+            }
+        };
+        return workerList.get(title);
+    }
+}
+```
+
+**主类**
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Company company = new Proxy();
+        company.findWorker("java");
+    }
+}
+```
+
+## 外观模式
+
+外观模式（Facade Pattern）也叫作门面模式，通过一个门面（Facade）向客户端提供一个访问系统的统一接口，客户端无须关心和知晓系统内部各子模块（系统）之间的复杂关系，其主要目的是降低访问拥有多个子系统的复杂系统的难度，简化客户端与其之间的接口。外观模式将子系统中的功能抽象成一个统一的接口，客户端通过这个接口访问系统，使得系统使用起来更加容易.
+
+**子系统角色**
+
+```java
+public class Dashboard {
+    public void startup(){
+        System.out.println("仪表盘启动");
+    }
+
+    public void shutdown(){
+        System.out.println("仪表盘关闭");
+    }
+}
+```
+
+```java
+public class Engine {
+    public void startup(){
+        System.out.println("引擎启动");
+    }
+
+    public void shutdown(){
+        System.out.println("引擎关闭");
+    }
+}
+```
+
+```java
+public class SelfCheck {
+
+    public void startupCheck(){
+        System.out.println("汽车自检器启动");
+    }
+
+    public void shutdownCheck(){
+        System.out.println("汽车自检器关闭");
+    }
+}
+```
+
+**门面类**
+
+```java
+public class Starter {
+
+    private Dashboard dashboard;
+
+    private Engine engine;
+
+    private SelfCheck selfCheck;
+
+    public Starter(){
+        this.dashboard = new Dashboard();
+        this.engine = new Engine();
+        this.selfCheck = new SelfCheck();
+    }
+
+    public void startup(){
+        engine.startup();
+        dashboard.startup();
+        selfCheck.startupCheck();
+    }
+
+    public void shutdown(){
+        selfCheck.shutdownCheck();
+        dashboard.shutdown();
+        engine.shutdown();
+    }
+}
+```
+
+**主类**
+
+```java
+public class Main {
+
+    public static void main(String[] args) {
+        Starter starter = new Starter();
+        starter.startup();
+        System.out.println("*********************************");
+        starter.shutdown();
+    }
+}
+```
+
+## 桥接模式
+
+通过定义公共接口, 实现传入不同的实现类对象, 不改变代码逻辑的情况下完成不同的功能.
+
+**公共接口**
+
+```java
+public interface Driver {
+    void executeSQL();
+}
+```
+
+**实现类**
+
+```java
+public class MysqlDriver implements Driver {
+    @Override
+    public void executeSQL() {
+        System.out.println("mysql执行了sql");
+    }
+}
+```
+
+```java
+public class OracleDriver implements Driver {
+    @Override
+    public void executeSQL() {
+        System.out.println("oracle执行了sql");
+    }
+}
+```
+
+**抽象类**
+
+传入不同的类对象, 调用各自的方法
+
+```java
+public abstract class DriverManagerBridge {
+
+    private Driver driver;
+    public void execute(){
+        this.driver.executeSQL();
+    }
+    public Driver getDriver(){
+        return driver;
+    }
+    public void setDriver(Driver driver){
+        this.driver = driver;
+    }
+}
+```
+
+**抽象类的实现类**
+
+```java
+public class MyDriverBridge extends DriverManagerBridge {
+    // 可以不重写, 直接调用抽象类的方法
+	@Override
+    public void execute() {
+        getDriver().executeSQL();
+    }
+}
+```
+
+**主类**
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        DriverManagerBridge driverManagerBridge = new MyDriverBridge();
+        driverManagerBridge.setDriver(new MysqlDriver());
+        driverManagerBridge.execute();
+	    // 传入不同类对象
+        driverManagerBridge.setDriver(new OracleDriver());
+        driverManagerBridge.execute();
+    }
+}
+```
+
+## 组合模式
+
+组合模式（Composite Pattern）又叫作部分整体模式，主要用于实现部分和整体操作的一致性。组合模式常根据树形结构来表示部分及整体之间的关系，使得用户对单个对象和组合对象的操作具有一致性。组合模式通过特定的数据结构简化了部分和整体之间的关系，使得客户端可以像处理单个元素一样来处理整体的数据集，而无须关心单个元素和整体数据集之间的内部复杂结构。组合模式以类似树形结构的方式实现整体和部分之间关系的组合。
+
+简单的说, 就是实体类嵌套.
+
+**实体类**
+
+```java
+public class TreeNode {
+    private String name;
+    private TreeNode parent;
+    private Vector<TreeNode> children = new Vector<TreeNode>();
+    public TreeNode(String name){
+        this.name = name;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public TreeNode getParent() {
+        return parent;
+    }
+
+    public void setParent(TreeNode parent) {
+        this.parent = parent;
+    }
+
+    public void add(TreeNode node){
+        children.add(node);
+    }
+
+    public void remove(TreeNode node){
+        children.remove(node);
+    }
+
+    public Enumeration<TreeNode> getChildren(){
+        return children.elements();
+    }
+
+    @Override
+    public String toString() {
+        return "TreeNode{" +
+                "name='" + name + '\'' +
+                ", parent=" + parent +
+                ", children=" + children +
+                '}';
+    }
+}
+```
+
+**主类**
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        TreeNode nodeA = new TreeNode("A");
+        TreeNode nodeB = new TreeNode("B");
+        nodeA.add(nodeB);
+        System.out.println(nodeA.toString());
+    }
+}
+```
+
+
 
 # 行为型模式
