--- a/面试/算法/数组/简单/数组-简单(1-20).md
+++ b/面试/算法/数组/简单/数组-简单(1-20).md
@@ -8,7 +8,94 @@
 
 # 数组-简单(1-20)
 
-## 1.[[27. 移除元素](https://leetcode-cn.com/problems/remove-element/)]
+## 1.[[1. 两数之和](https://leetcode-cn.com/problems/two-sum/)]
+
+**描述**
+
+给定一个整数数组 nums 和一个目标值 target，请你在该数组中找出和为目标值的那 两个 整数，并返回他们的数组下标。
+
+你可以假设每种输入只会对应一个答案。但是，数组中同一个元素不能使用两遍。
+
+**示例**
+
+**示例 1：**
+
+```
+给定 nums = [2, 7, 11, 15], target = 9
+
+因为 nums[0] + nums[1] = 2 + 7 = 9
+所以返回 [0, 1]
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] twoSum(int[] nums, int target) {
+        Map<Integer, Integer> map = new HashMap<>();
+        int[] res = new int[2];
+        for(int i=0; i<nums.length; i++){
+            if(!map.containsKey(target - nums[i])){
+                map.put(nums[i], i);
+                continue;
+            }
+            res[0] = i;
+            res[1] = map.get(target - nums[i]);
+            return res;
+        }
+        return null;
+    }
+}
+```
+
+## 2.[[26. 删除排序数组中的重复项](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/)]
+
+**描述**
+
+给定一个排序数组，你需要在 原地 删除重复出现的元素，使得每个元素只出现一次，返回移除后数组的新长度。
+
+不要使用额外的数组空间，你必须在 原地 修改输入数组 并在使用 O(1) 额外空间的条件下完成。
+
+**示例**
+
+**示例 1：**
+
+```
+给定数组 nums = [1,1,2], 
+函数应该返回新的长度 2, 并且原数组 nums 的前两个元素被修改为 1, 2。 
+你不需要考虑数组中超出新长度后面的元素。
+```
+
+**示例 2:**
+
+```
+给定 nums = [0,0,1,1,1,2,2,3,3,4],
+函数应该返回新的长度 5, 并且原数组 nums 的前五个元素被修改为 0, 1, 2, 3, 4。
+你不需要考虑数组中超出新长度后面的元素。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int removeDuplicates(int[] nums) {
+        int slow = 0;
+        for(int fast=1; fast<nums.length; fast++){
+            if(nums[slow] != nums[fast]){
+                slow++;
+                nums[slow] = nums[fast];
+            }
+        }
+        return slow+1;
+    }
+}
+```
+
+## 3.[[27. 移除元素](https://leetcode-cn.com/problems/remove-element/)]
 
 **描述**
 
@@ -56,7 +143,7 @@ class Solution {
 }
 ```
 
-## 2.[[35. 搜索插入位置](https://leetcode-cn.com/problems/search-insert-position/)]
+## 4.[[35. 搜索插入位置](https://leetcode-cn.com/problems/search-insert-position/)]
 
 **描述**
 
@@ -117,7 +204,142 @@ class Solution {
 }
 ```
 
-## 2.[[118. 杨辉三角](https://leetcode-cn.com/problems/pascals-triangle/)]
+## 5.[[53. 最大子序和](https://leetcode-cn.com/problems/maximum-subarray/)]
+
+**描述**
+
+给定一个整数数组 `nums` ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: [-2,1,-3,4,-1,2,1,-5,4]
+输出: 6
+解释: 连续子数组 [4,-1,2,1] 的和最大，为 6。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        int result= nums[0];
+        int tmp = 0;
+        for(int item : nums){
+            // 大于0 才相加, 不大于0, 直接赋值
+            if(tmp>0){
+                tmp += item;
+            }else{
+                tmp = item;
+            }
+            result = result > tmp ? result : tmp;
+        }
+        return result;
+    }
+}
+```
+
+## 6.[[66. 加一](https://leetcode-cn.com/problems/plus-one/)]
+
+**描述**
+
+给定一个由整数组成的非空数组所表示的非负整数，在该数的基础上加一。
+
+最高位数字存放在数组的首位， 数组中每个元素只存储单个数字。
+
+你可以假设除了整数 0 之外，这个整数不会以零开头。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: [1,2,3]
+输出: [1,2,4]
+解释: 输入数组表示数字 123。
+```
+
+**示例 2：**
+
+```
+输入: [4,3,2,1]
+输出: [4,3,2,2]
+解释: 输入数组表示数字 4321。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] plusOne(int[] digits) {
+        for (int i = digits.length - 1; i >= 0; i--) {
+            int tmp = (digits[i] + 1) % 10;
+            digits[i] = tmp;
+            if (tmp != 0) return digits;
+        }
+        digits = new int[digits.length + 1];
+        digits[0] = 1;
+        return digits;
+    }
+}
+```
+
+## 7.[[88. 合并两个有序数组](https://leetcode-cn.com/problems/merge-sorted-array/)]
+
+**描述**
+
+给你两个有序整数数组 *nums1* 和 *nums2*，请你将 *nums2* 合并到 *nums1* 中*，*使 *nums1* 成为一个有序数组。
+
+说明：
+
+- 初始化 nums1 和 nums2 的元素数量分别为 m 和 n 。
+- 你可以假设 nums1 有足够的空间（空间大小大于或等于 m + n）来保存 nums2 中的元素。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：
+nums1 = [1,2,3,0,0,0], m = 3
+nums2 = [2,5,6],       n = 3
+
+输出：[1,2,2,3,5,6]
+```
+
+**提示：**
+
+- -10^9 <= nums1[i], nums2[i] <= 10^9
+- nums1.length == m + n
+- nums2.length == n
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public void merge(int[] nums1, int m, int[] nums2, int n) {
+        int len1 = m - 1;
+        int len2 = n - 1;
+        int len = m + n - 1;
+        while(len1 >= 0 && len2 >= 0) {
+            // 注意--符号在后面，表示先进行计算再减1，这种缩写缩短了代码
+            nums1[len--] = nums1[len1] > nums2[len2] ? nums1[len1--] : nums2[len2--];
+        }
+        // 表示将nums2数组从下标0位置开始，拷贝到nums1数组中，从下标0位置开始，长度为len2+1
+        System.arraycopy(nums2, 0, nums1, 0, len2 + 1);
+    }
+}
+```
+
+## 8.[[118. 杨辉三角](https://leetcode-cn.com/problems/pascals-triangle/)]
 
 **描述**
 
@@ -163,7 +385,7 @@ class Solution {
 }
 ```
 
-## 2.[[119. 杨辉三角 II](https://leetcode-cn.com/problems/pascals-triangle-ii/)]
+## 9.[[119. 杨辉三角 II](https://leetcode-cn.com/problems/pascals-triangle-ii/)]
 
 **描述**
 
@@ -202,7 +424,106 @@ class Solution {
 }
 ```
 
-## 3.[[167. 两数之和 II - 输入有序数组](https://leetcode-cn.com/problems/two-sum-ii-input-array-is-sorted/)]
+## 10.[[121. 买卖股票的最佳时机](https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/)]
+
+**描述**
+
+给定一个数组，它的第 i 个元素是一支给定股票第 i 天的价格。
+
+如果你最多只允许完成一笔交易（即买入和卖出一支股票一次），设计一个算法来计算你所能获取的最大利润。
+
+注意：你不能在买入股票前卖出股票。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: [7,1,5,3,6,4]
+输出: 5
+解释: 在第 2 天（股票价格 = 1）的时候买入，在第 5 天（股票价格 = 6）的时候卖出，最大利润 = 6-1 = 5 。
+     注意利润不能是 7-1 = 6, 因为卖出价格需要大于买入价格；同时，你不能在买入前卖出股票。
+```
+
+**示例 2:**
+
+```
+输入: [7,6,4,3,1]
+输出: 0
+解释: 在这种情况下, 没有交易完成, 所以最大利润为 0。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int min = Integer.MAX_VALUE;
+        int max = 0;
+        for(int price : prices){
+            if(price < min){
+                min = price;
+            }else if(max < price - min){
+                max = price - min;
+            }
+        }
+        return max;
+    }
+}
+```
+
+## 11.[[122. 买卖股票的最佳时机 II](https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-ii/)]
+
+**描述**
+
+给定一个数组，它的第 i 个元素是一支给定股票第 i 天的价格。
+
+设计一个算法来计算你所能获取的最大利润。你可以尽可能地完成更多的交易（多次买卖一支股票）。
+
+注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: [7,1,5,3,6,4]
+输出: 7
+解释: 在第 2 天（股票价格 = 1）的时候买入，在第 3 天（股票价格 = 5）的时候卖出, 这笔交易所能获得利润 = 5-1 = 4 。
+     随后，在第 4 天（股票价格 = 3）的时候买入，在第 5 天（股票价格 = 6）的时候卖出, 这笔交易所能获得利润 = 6-3 = 3 。
+```
+
+**示例 2:**
+
+```
+输入: [1,2,3,4,5]
+输出: 4
+解释: 在第 1 天（股票价格 = 1）的时候买入，在第 5 天 （股票价格 = 5）的时候卖出, 这笔交易所能获得利润 = 5-1 = 4 。
+     注意你不能在第 1 天和第 2 天接连购买股票，之后再将它们卖出。
+     因为这样属于同时参与了多笔交易，你必须在再次购买前出售掉之前的股票。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int result = 0;
+        for(int i=1; i<prices.length; i++){
+            if(prices[i] > prices[i-1]){
+                result += prices[i] - prices[i-1];
+            }
+        }
+        return result;
+    }
+}
+```
+
+## 12.[[167. 两数之和 II - 输入有序数组](https://leetcode-cn.com/problems/two-sum-ii-input-array-is-sorted/)]
 
 **描述**
 
@@ -252,7 +573,360 @@ class Solution {
 }
 ```
 
-## 4.[[485. 最大连续1的个数](https://leetcode-cn.com/problems/max-consecutive-ones/)]
+## 13.[[169. 多数元素](https://leetcode-cn.com/problems/majority-element/)]
+
+**描述**
+
+给定一个大小为 n 的数组，找到其中的多数元素。多数元素是指在数组中出现次数大于 ⌊ n/2 ⌋ 的元素。
+
+你可以假设数组是非空的，并且给定的数组总是存在多数元素。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: [3,2,3]
+输出: 3
+```
+
+**示例 2:**
+
+```
+输入: [2,2,1,1,1,2,2]
+输出: 2
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int majorityElement(int[] nums) {
+        // 排序后, 最中间的数, 就是满足出现次数大于 n/2的数
+        Arrays.sort(nums);
+        return nums[nums.length/2];
+    }
+}
+```
+
+## 14.[[217. 存在重复元素](https://leetcode-cn.com/problems/contains-duplicate/)]
+
+**描述**
+
+给定一个整数数组，判断是否存在重复元素。
+
+如果任意一值在数组中出现至少两次，函数返回 `true` 。如果数组中每个元素都不相同，则返回 `false` 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: [1,2,3,1]
+输出: true
+```
+
+**示例 2:**
+
+```
+输入: [1,2,3,4]
+输出: false
+```
+
+**示例 3:**
+
+```
+输入: [1,1,1,3,3,4,3,2,4,2]
+输出: true
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean containsDuplicate(int[] nums) {
+        Arrays.sort(nums);
+        for (int i = 0; i < nums.length - 1; ++i) {
+            if (nums[i] == nums[i + 1]) return true;
+        }
+        return false;
+    }
+}
+```
+
+## 15.[[219. 存在重复元素 II](https://leetcode-cn.com/problems/contains-duplicate-ii/)]
+
+**描述**
+
+给定一个整数数组和一个整数 k，判断数组中是否存在两个不同的索引 i 和 j，使得 nums [i] = nums [j]，并且 i 和 j 的差的 绝对值 至多为 k。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: nums = [1,2,3,1], k = 3
+输出: true
+```
+
+**示例 2:**
+
+```
+输入: nums = [1,0,1,1], k = 1
+输出: true
+```
+
+**示例 3:**
+
+```
+输入: nums = [1,2,3,1,2,3], k = 2
+输出: false
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean containsNearbyDuplicate(int[] nums, int k) {
+        Map<Integer, Integer> map = new HashMap<>();
+        int i=0;
+        for(int num: nums){
+            if(map.containsKey(num)){
+                if(Math.abs(map.get(num) - i) <= k){
+                    return true;
+                }
+            }
+            map.put(num, i);
+            i++;
+        }
+        return false;
+    }
+}
+```
+
+## 16.[[268. 丢失的数字](https://leetcode-cn.com/problems/missing-number/)]
+
+**描述**
+
+给定一个包含 `[0, n]` 中 `n` 个数的数组 `nums` ，找出 `[0, n]` 这个范围内没有出现在数组中的那个数。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：nums = [3,0,1]
+输出：2
+解释：n = 3，因为有 3 个数字，所以所有的数字都在范围 [0,3] 内。2 是丢失的数字，因为它没有出现在 nums 中。
+```
+
+**示例 2:**
+
+```
+输入：nums = [0,1]
+输出：2
+解释：n = 2，因为有 2 个数字，所以所有的数字都在范围 [0,2] 内。2 是丢失的数字，因为它没有出现在 nums 中。
+```
+
+**示例 3:**
+
+```
+输入：nums = [9,6,4,2,3,5,7,0,1]
+输出：8
+解释：n = 9，因为有 9 个数字，所以所有的数字都在范围 [0,9] 内。8 是丢失的数字，因为它没有出现在 nums 中
+```
+
+**提示：**
+
+- `n == nums.length`
+- `1 <= n <= 104`
+- `0 <= nums[i] <= n`
+- `nums` 中的所有数字都 **独一无二**
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int missingNumber(int[] nums) {
+        // 使用异或运算, 相同为0 ,0异或n 为n, 
+        // n(为3) 和 [3,0,1], 以及他的索引 0, 1, 2 异或, 最后结果就是缺失的数字2
+        int missing = nums.length;
+        for (int i = 0; i < nums.length; i++) {
+            missing ^= i ^ nums[i];
+        }
+        return missing;
+    }
+}
+```
+
+## 17.[[283. 移动零](https://leetcode-cn.com/problems/move-zeroes/)]
+
+**描述**
+
+给定一个数组 `nums`，编写一个函数将所有 `0` 移动到数组的末尾，同时保持非零元素的相对顺序。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: [0,1,0,3,12]
+输出: [1,3,12,0,0]
+```
+
+**说明**:
+
+1. 必须在原数组上操作，不能拷贝额外的数组。
+2. 尽量减少操作次数。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public void moveZeroes(int[] nums) {
+        int slow = 0;
+        for(int fast=0; fast<nums.length; fast++){
+            if(nums[fast] != 0){
+                nums[slow] = nums[fast];
+                // 当两个指针不指向同一个节点时, 才置为0
+                if(fast != slow){
+                    nums[fast] = 0;
+                }
+                slow++;
+            }
+        }
+    }
+}
+```
+
+## 18.[[414. 第三大的数](https://leetcode-cn.com/problems/third-maximum-number/)]
+
+**描述**
+
+给定一个非空数组，返回此数组中第三大的数。如果不存在，则返回数组中最大的数。要求算法时间复杂度必须是O(n)。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: [3, 2, 1]
+输出: 1
+解释: 第三大的数是 1.
+```
+
+**示例 2:**
+
+```
+输入: [1, 2]
+输出: 2
+解释: 第三大的数不存在, 所以返回最大的数 2 .
+```
+
+示例 3:
+
+```
+输入: [2, 2, 3, 1]
+输出: 1
+解释: 注意，要求返回第三大的数，是指第三大且唯一出现的数。
+存在两个值为2的数，它们都排第二。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int thirdMax(int[] nums) {
+        // 声明三个变量, 第一大的值, 第二大的值, 第三大的值
+        long first = Long.MIN_VALUE;
+        long second = Long.MIN_VALUE;
+        long third = Long.MIN_VALUE;
+        for(int num: nums){
+            // 如果已存在, 就跳过
+            if(first == num || second == num || third == num) continue;
+            // 如果大于第一大的值, 就将值往后传
+            if(num > first){
+                third = second;
+                second = first;
+                first = num;
+            }else if(num > second){
+                third = second;
+                second = num;
+            }else if(num > third){
+                third = num;
+            }
+        }
+        return third == Long.MIN_VALUE ? (int)first : (int)third;
+    }
+}
+```
+
+## 19.[[448. 找到所有数组中消失的数字](https://leetcode-cn.com/problems/find-all-numbers-disappeared-in-an-array/)]
+
+**描述**
+
+给定一个范围在  1 ≤ a[i] ≤ n ( n = 数组大小 ) 的 整型数组，数组中的元素一些出现了两次，另一些只出现一次。
+
+找到所有在 [1, n] 范围之间没有出现在数组中的数字。
+
+您能在不使用额外空间且时间复杂度为O(n)的情况下完成这个任务吗? 你可以假定返回的数组不算在额外空间内。
+
+**示例**
+
+**示例 1：**
+
+```
+输入:
+[4,3,2,7,8,2,3,1]
+
+输出:
+[5,6]
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public List<Integer> findDisappearedNumbers(int[] nums) {
+        List<Integer> res = new ArrayList<>(); 
+        int n = nums.length;
+        // 取出每个数, 把这个数-1, 当作索引, 对该索引值的位置进行标记(*-1), 变为负数
+        for(int i=0; i<n; i++){
+            // 取出数字, 因为有可能当前的数字已被 * -1 所以取绝对值
+            int num = Math.abs(nums[i]);
+            // 计算索引
+            int index = num - 1;
+            // 如果当前值小于0, 就说明已经标记过了
+            if(nums[index] > 0){
+                nums[index] *= -1;
+            }
+        }
+        // 再次遍历, 不为负数的值, 说明没被标记
+        for(int i=0; i<n; i++){
+            if(nums[i] > 0){
+                res.add(i+1);                
+            }
+        }
+        return res;
+    }
+}
+```
+
+## 20.[[485. 最大连续1的个数](https://leetcode-cn.com/problems/max-consecutive-ones/)]
 
 **描述**
 
@@ -295,7 +969,7 @@ class Solution {
 }
 ```
 
-## 5.[[724. 寻找数组的中心索引](https://leetcode-cn.com/problems/find-pivot-index/)]
+## 10.[[724. 寻找数组的中心索引](https://leetcode-cn.com/problems/find-pivot-index/)]
 
 **描述**
 
