--- a/面试/算法/双指针/中等/双指针-中等(1-20).md
+++ b/面试/算法/双指针/中等/双指针-中等(1-20).md
@@ -8,6 +8,57 @@
 
 # 双指针-中等(1-20)
 
+## 1.[[80. 删除排序数组中的重复项 II](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array-ii/)]
+
+**描述**
+
+给定一个排序数组，你需要在原地删除重复出现的元素，使得每个元素最多出现两次，返回移除后数组的新长度。
+
+不要使用额外的数组空间，你必须在原地修改输入数组并在使用 O(1) 额外空间的条件下完成。
+
+**示例 1：**
+
+```
+给定 nums = [1,1,1,2,2,3],
+函数应返回新长度 length = 5, 并且原数组的前五个元素被修改为 1, 1, 2, 2, 3 。
+你不需要考虑数组中超出新长度后面的元素。
+```
+
+**示例 2:**
+
+```
+给定 nums = [0,0,1,1,1,1,2,3,3],
+函数应返回新长度 length = 7, 并且原数组的前五个元素被修改为 0, 0, 1, 1, 2, 3, 3 。
+你不需要考虑数组中超出新长度后面的元素。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int removeDuplicates(int[] nums) {
+        // 慢指针与快指针都从1开始, 因为0不需要变, 并且快指针需要比较前一个节点
+        int slow = 1; 
+        // count用来计数当前数字的数量, 至少是1
+        int count = 1;
+        for (int fast = 1; fast < nums.length; fast++) {
+            if(nums[fast] == nums[fast-1]){
+                count++;
+            }else{
+                count = 1;
+            }
+            if(count <= 2){
+                nums[slow] = nums[fast];
+                slow++;
+            }
+        }
+        return slow;
+    }
+}
+```
+
 ## 1.[[209. 长度最小的子数组](https://leetcode-cn.com/problems/minimum-size-subarray-sum/)]
 
 **描述**
@@ -52,3 +103,4 @@ class Solution {
     }
 }
 ```
+
