--- a/面试/算法/双指针/简单/双指针-简单(1-20).md
+++ b/面试/算法/双指针/简单/双指针-简单(1-20).md
@@ -8,7 +8,52 @@
 
 # 双指针-简单(1-20)
 
-## 1.[[27. 移除元素](https://leetcode-cn.com/problems/remove-element/)]
+## 1.[[26. 删除排序数组中的重复项](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/)]
+
+**描述**
+
+给定一个排序数组，你需要在 原地 删除重复出现的元素，使得每个元素只出现一次，返回移除后数组的新长度。
+
+不要使用额外的数组空间，你必须在 原地 修改输入数组 并在使用 O(1) 额外空间的条件下完成。
+
+**示例**
+
+**示例 1：**
+
+```
+给定数组 nums = [1,1,2], 
+函数应该返回新的长度 2, 并且原数组 nums 的前两个元素被修改为 1, 2。 
+你不需要考虑数组中超出新长度后面的元素。
+```
+
+**示例 2:**
+
+```
+给定 nums = [0,0,1,1,1,2,2,3,3,4],
+函数应该返回新的长度 5, 并且原数组 nums 的前五个元素被修改为 0, 1, 2, 3, 4。
+你不需要考虑数组中超出新长度后面的元素。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int removeDuplicates(int[] nums) {
+        int slow = 0;
+        for(int fast=1; fast<nums.length; fast++){
+            if(nums[slow] != nums[fast]){
+                slow++;
+                nums[slow] = nums[fast];
+            }
+        }
+        return slow+1;
+    }
+}
+```
+
+## 2.[[27. 移除元素](https://leetcode-cn.com/problems/remove-element/)]
 
 **描述**
 
@@ -56,7 +101,7 @@ class Solution {
 }
 ```
 
-## 2.[[167. 两数之和 II - 输入有序数组](https://leetcode-cn.com/problems/two-sum-ii-input-array-is-sorted/)]
+## 3.[[167. 两数之和 II - 输入有序数组](https://leetcode-cn.com/problems/two-sum-ii-input-array-is-sorted/)]
 
 **描述**
 
@@ -106,7 +151,49 @@ class Solution {
 }
 ```
 
-## 3.[[344. 反转字符串](https://leetcode-cn.com/problems/reverse-string/)]
+## 4.[[283. 移动零](https://leetcode-cn.com/problems/move-zeroes/)]
+
+**描述**
+
+给定一个数组 `nums`，编写一个函数将所有 `0` 移动到数组的末尾，同时保持非零元素的相对顺序。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: [0,1,0,3,12]
+输出: [1,3,12,0,0]
+```
+
+**说明**:
+
+1. 必须在原数组上操作，不能拷贝额外的数组。
+2. 尽量减少操作次数。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public void moveZeroes(int[] nums) {
+        int slow = 0;
+        for(int fast=0; fast<nums.length; fast++){
+            if(nums[fast] != 0){
+                nums[slow] = nums[fast];
+                // 当两个指针不指向同一个节点时, 才置为0
+                if(fast != slow){
+                    nums[fast] = 0;
+                }
+                slow++;
+            }
+        }
+    }
+}
+```
+
+## 5.[[344. 反转字符串](https://leetcode-cn.com/problems/reverse-string/)]
 
 **描述**
 
