--- a/面试/算法/数组/中等/数组-中等(1-20).md
+++ b/面试/算法/数组/中等/数组-中等(1-20).md
@@ -65,7 +65,58 @@ class Solution {
 }
 ```
 
-## 2.[[153. 寻找旋转排序数组中的最小值](https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array/)]
+## 2.[[80. 删除排序数组中的重复项 II](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array-ii/)]
+
+**描述**
+
+给定一个排序数组，你需要在原地删除重复出现的元素，使得每个元素最多出现两次，返回移除后数组的新长度。
+
+不要使用额外的数组空间，你必须在原地修改输入数组并在使用 O(1) 额外空间的条件下完成。
+
+**示例 1：**
+
+```
+给定 nums = [1,1,1,2,2,3],
+函数应返回新长度 length = 5, 并且原数组的前五个元素被修改为 1, 1, 2, 2, 3 。
+你不需要考虑数组中超出新长度后面的元素。
+```
+
+**示例 2:**
+
+```
+给定 nums = [0,0,1,1,1,1,2,3,3],
+函数应返回新长度 length = 7, 并且原数组的前五个元素被修改为 0, 0, 1, 1, 2, 3, 3 。
+你不需要考虑数组中超出新长度后面的元素。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int removeDuplicates(int[] nums) {
+        // 慢指针与快指针都从1开始, 因为0不需要变, 并且快指针需要比较前一个节点
+        int slow = 1; 
+        // count用来计数当前数字的数量, 至少是1
+        int count = 1;
+        for (int fast = 1; fast < nums.length; fast++) {
+            if(nums[fast] == nums[fast-1]){
+                count++;
+            }else{
+                count = 1;
+            }
+            if(count <= 2){
+                nums[slow] = nums[fast];
+                slow++;
+            }
+        }
+        return slow;
+    }
+}
+```
+
+## 3.[[153. 寻找旋转排序数组中的最小值](https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array/)]
 
 **描述**
 
@@ -93,44 +144,41 @@ class Solution {
 输出: 0
 ```
 
-**提示：**
-
-- `intervals[i][0] <= intervals[i][1]`
-
 **题解**
 
 **Java**
 
 ```java
 class Solution {
-  	public int findMin(int[] nums) {
-    	if (nums.length == 1) {
-      		return nums[0];
-    	}
-    	int left = 0, right = nums.length - 1;
-    	if (nums[right] > nums[0]) {
-      		return nums[0];
-    	}
-    	while (right >= left) {
+    public int findMin(int[] nums) {
+        if(nums.length == 1) return nums[0];
+        int left = 0, right = nums.length - 1;
+        // 如果数组最后一位数大于第一位数, 说明该数组没有被旋转, 第一位就是最小的
+        if(nums[right] > nums[left]){
+            return nums[0];
+        }
+        while(left <= right){
             int mid = left + (right - left) / 2;
-            if (nums[mid] > nums[mid + 1]) {
+            // 如果前一个数大于后一个数, 后一个数就是最小值
+            // 例  4,5,6,3,4   6 > 3
+            if(nums[mid] > nums[mid + 1]){
                 return nums[mid + 1];
             }
-            if (nums[mid - 1] > nums[mid]) {
+            if(nums[mid - 1] > nums[mid]){
                 return nums[mid];
             }
-            if (nums[mid] > nums[0]) {
+            if(nums[mid] > nums[0]){
                 left = mid + 1;
-            } else {
+            }else{
                 right = mid - 1;
             }
-    	}
-    	return -1;
-  	}
+        }
+        return -1;
+    }
 }
 ```
 
-## 3.[[209. 长度最小的子数组](https://leetcode-cn.com/problems/minimum-size-subarray-sum/)]
+## 4.[[209. 长度最小的子数组](https://leetcode-cn.com/problems/minimum-size-subarray-sum/)]
 
 **描述**
 
@@ -175,7 +223,7 @@ class Solution {
 }
 ```
 
-## 4.[[498. 对角线遍历](https://leetcode-cn.com/problems/diagonal-traverse/)]
+## 5.[[498. 对角线遍历](https://leetcode-cn.com/problems/diagonal-traverse/)]
 
 **描述**
 
@@ -250,7 +298,7 @@ class Solution {
 }
 ```
 
-## 5.[[面试题 01.07. 旋转矩阵](https://leetcode-cn.com/problems/rotate-matrix-lcci/)]
+## 6.[[面试题 01.07. 旋转矩阵](https://leetcode-cn.com/problems/rotate-matrix-lcci/)]
 
 **描述**
 
@@ -322,7 +370,7 @@ class Solution {
 }
 ```
 
-## 6.[[面试题 01.08. 零矩阵](https://leetcode-cn.com/problems/zero-matrix-lcci/)]
+## 7.[[面试题 01.08. 零矩阵](https://leetcode-cn.com/problems/zero-matrix-lcci/)]
 
 **描述**
 
