--- a/后端/工具.md
+++ b/后端/工具.md
@@ -503,3 +503,110 @@ public void method(){
 }
 ```
 
+# JSON
+
+## Jackson
+
+### 依赖
+
+```xml
+<dependeny>
+	<groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.9.8</version>
+</dependeny>
+```
+
+### 配置
+
+#### 解决返回json乱码
+
+在spring-mvc.xml中添加
+
+```xml
+<!-- 使用Jackson时, 这么解决 -->
+<mvc:annotation-driven>
+	<mvc:message-converters register-defaults="true">
+    	<bean class="org.springframework.http.converter.StringHttpMessageConverter">
+        	<constructorarg value="utf-8" />
+        </bean>
+        <bean class="org.springframework.http.converter.json.MappingJackson2HttpMessageConverter">
+        	<property name="objectMapper">
+            	<bean 
+                    class="org.springframework.http.converter.json.Jackson2ObjectMapperFactoryBean">
+                    <property name="failOnEmptyBeans" value="false"></property>
+                </bean>
+            </property>
+        </bean>
+    </mvc:message-converters>
+</mvc:annotation-driven>
+```
+
+### 使用
+
+#### 对象转json
+
+```java
+ObjectMapper om = new ObjectMapper();
+String str = om.writeValueAsString(user);
+```
+
+#### 格式化日期
+
+```java
+ObjectMapper om = new ObjectMapper();
+// 禁用返回时间戳
+om.configure(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS, false);
+// 自定义日期转换格式
+SimpleDateFormat sdf = new SImpleDateFormat("yyyy-MM-dd HH:mm:ss");
+om.setDateFormat(sdf);
+String str = om.writeValueAsString(new Date());
+```
+
+### 工具类
+
+```java
+public class JsonUtils{
+    public static String getJson(Obejct object){
+        return getJson(object, "yyyy-MM-dd HH:mm:ss");
+    }
+    public static String getJson(Obejct object, String sdf){
+        ObjectMapper om = new ObjectMapper();
+        om.configure(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS, false);
+        SimpleDateFormat simpleDateFormat = new SImpleDateFormat(sdf);
+        om.setDateFormat(simpleDateFormat);
+        try{
+            return om.writeValueAsString(object);
+        }catch(JsonProcessingException e){
+            log.error(e);
+        }
+        return null;
+    }
+}
+```
+
+## FastJson
+
+### 依赖
+
+```xml
+<dependeny>
+	<groupId>com.alibaba</groupId>
+    <artifactId>fastjson</artifactId>
+    <version>1.2.60</version>
+</dependeny>
+```
+
+### 使用
+
+```java
+// java对象转json字符串
+String str = JSON.toJSONString(user);
+// json字符串转java对象
+User user = JSON.parseObject(str, User.class);
+// java对象转json对象
+JSONObject json = (JSONObject) JSON.toJSON(user);
+// json对象转java对象
+User user = JSON.toJavaObject(json, User.class);
+```
+
