--- a/后端/数据库.md
+++ b/后端/数据库.md
@@ -593,6 +593,18 @@ public class jdbcUtils_DBCP{
 
 ### C3P0
 
-导入c3p0-0.9.5.5.jar, mchange-commons-java-0.2.19.jar
+#### 依赖
+
+```xml
+<dependency>
+    <groupId>com.mchange</groupId>
+    <artifactId>c3p0</artifactId>
+    <version>0.9.5.5</version>
+</dependency>
+```
+
+
+
+
 
 略
