--- a/后端/项目管理工具.md
+++ b/后端/项目管理工具.md
@@ -38,3 +38,29 @@ https://mvnrepository.com/
 
 ## 命令
 
+## pom文件
+
+```xml
+<!-- 解决静态资源导出问题 -->
+<build>
+    <resources>
+        <resource>
+            <directory>src/main/java</directory>
+            <includes>
+            	<include>**/*.propreties</include>
+                <include>**/*.xml</include>
+            </includes>
+            <filtering>false</filtering>
+        </resource>
+        <resource>
+            <directory>src/main/resources</directory>
+            <includes>
+            	<include>**/*.propreties</include>
+                <include>**/*.xml</include>
+            </includes>
+            <filtering>false</filtering>
+        </resource>
+    </resources>
+</build>
+```
+
