--- a/后端/服务器.md
+++ b/后端/服务器.md
@@ -59,3 +59,34 @@ server.xml
 <Host name="localhost" appBase="webapps" unpackWARs="true" autoDeploy="true">
 ```
 
+## 修改为https
+
+### 生成密匙
+
+**注:**  名字与姓氏需要填写域名
+
+```
+keytool -genkeypair -alias "tomcat" -keyalg "RSA" -keystore "D:\tomcat.keystore"
+```
+
+### 修改配置文件
+
+conf/server.xml
+
+```xml
+<!-- 将 -->
+<!-- 
+ <Connector port="8080" protocol="HTTP/1.1"
+               connectionTimeout="20000"
+               redirectPort="8443" />  
+-->
+<!-- 修改为 -->
+<Connector 
+	protocol="org.apache.coyote.http11.Http11NioProtocol"
+	port="8080" maxThreads="200"
+	scheme="https" secure="true" SSLEnabled="true"
+	keystoreFile="D:\tomcat.keystore" 
+           keystorePass="123456"
+	clientAuth="false" sslProtocol="TLS"/>
+```
+
