--- a/后端/工具.md
+++ b/后端/工具.md
@@ -135,7 +135,17 @@ public class IDWorker {
 
 # 下载器
 
-由于下载指定文件， 需要导入commons-io-2.7.jar
+## 依赖
+
+```xml
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.8.0</version>
+</dependency>
+```
+
+## 使用
 
 ```java
 import org.apache.commons.io.FileUtils;
@@ -157,6 +167,141 @@ class WebDownloader{
     }
 }
 ```
+
+# 文件上传/下载
+
+## 依赖
+
+```xml
+<dependency>
+    <groupId>commons-fileupload</groupId>
+    <artifactId>commons-fileupload</artifactId>
+    <version>1.4</version>
+</dependency>
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>4.0.1</version>
+</dependency>
+```
+
+## 配置
+
+applicationContext.xml
+
+```xml
+<bean id="multipartResolver" 
+      class="org.springframework.web.multipart.commons.CommonsMultipartResolver">
+	<property name="defaultEncoding" vlue="utf-8"></property>
+    <!-- 限制上传文件大小 -->
+    <property name="maxUploadSize" vlue="10485760"></property>
+    <property name="maxInMemorySize" vlue="40960"></property>
+</bean>
+```
+
+## 上传
+
+页面
+
+```html
+<form action="/upload" enctype="multipart/form-data" method="post">
+    <input type="file" name="file" />
+</form>
+```
+
+controller
+
+```java
+public class FileController{
+    // 方法1
+    @RequestMapping("/upload")
+    public String fileUpload(@RequestParam("file") CommonsMultipartFile file, 
+                             HttpServletRequest request) throws IOExceprion{
+        // 获取上传的文件名
+        String uploadFileName = file.getOriginalFilename();
+        // 文件保存位置
+        String path = request.getServletContext().getRealPath("/upload");
+        // 在系统的位置, 如果不存在则创建一个
+        File realPath = new File(path);
+        if(!realPath.exists()){
+            realPath.mkdir();
+        }
+        // 文件输入流
+        InputStream is = file.getInputStream();
+        // 文件输出流
+        OutputStream os = new FileOutputSteam(new File(realPath, uploadFileName));
+        // 写入
+        int len = 0;
+        byte[] buffer = new byte[1024];
+        while((len=is.read(buffer)) != -1){
+            os.write(buffer, 0, len);
+            os.flush();
+        }
+        os.close();
+        is.close();
+        // 跳转回首页
+        return "index";
+    }
+    // 方法2
+    @RequestMapping("/upload")
+    public String fileUpload(@RequestParam("file") CommonsMultipartFile file, 
+                             HttpServletRequest request) throws IOExceprion{
+        // 文件保存位置
+        String path = request.getServletContext().getRealPath("/upload");
+        // 在系统的位置, 如果不存在则创建一个
+        File realPath = new File(path);
+        if(!realPath.exists()){
+            realPath.mkdir();
+        }
+        // 通过CommonsMultipartFile的方法直接写文件
+        file.transferTo(new File(realPath + "/" + file.getOriginalFilename()));
+        // 跳转回首页
+        return "index";
+    }
+}
+```
+
+## 下载
+
+```java
+@RestController
+public class FileController{
+    @RequestMapping("/download")
+    public String downloads(HttpServletResponse response, HttpServletRequest request) 
+        throws Exception{
+        // 文件保存位置
+        String path = request.getServletContext().getRealPath("/upload");
+        // 图片名称
+        String fileName = request.getParameter("imgName");
+        // 设置响应头
+        // 设置页面不缓存, 清空buffer
+        response.reset();  
+        // 设置编码格式
+        response.setCharacterEncoding("utf-8");
+        // 设置传输格式, 二进制传输
+        response.setContentType("multipart/form-data");
+        // 在系统的位置, 如果不存在则创建一个
+        File realPath = new File(path);
+        File file = new File(realPath, fileName);
+        // 读取文件
+        InputStream is = new FileInputStream(file);
+        // 写入到输出流
+        OutputStream os = response.getOutputSteam();
+        int len = 0;
+        byte[] buffer = new byte[1024];
+        while((len=is.read(buffer)) != -1){
+            os.write(buffer, 0, len);
+            os.flush();
+        }
+        os.close();
+        is.close();
+        
+        return "ok";
+    }
+}
+```
+
+
 
 # Excel
 
