--- a/面试/算法/数组/简单/数组-简单(41-60).md
+++ b/面试/算法/数组/简单/数组-简单(41-60).md
@@ -1096,6 +1096,341 @@ class Solution {
 }
 ```
 
+## 57.[[1260. 二维网格迁移](https://leetcode-cn.com/problems/shift-2d-grid/)]
+
+**描述**
+
+给你一个 m 行 n 列的二维网格 grid 和一个整数 k。你需要将 grid 迁移 k 次。
+
+每次「迁移」操作将会引发下述活动：
+
+- 位于 grid[i][j] 的元素将会移动到 grid[i][j + 1]。
+- 位于 grid[i][n - 1] 的元素将会移动到 grid[i + 1][0]。
+- 位于 grid[m - 1][n - 1] 的元素将会移动到 grid[0][0]。
+
+请你返回 k 次迁移操作后最终得到的 二维网格。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：grid = [[1,2,3],[4,5,6],[7,8,9]], k = 1
+输出：[[9,1,2],[3,4,5],[6,7,8]]
+```
+
+**示例2:**
+
+```
+输入：grid = [[3,8,1,9],[19,7,2,5],[4,6,11,10],[12,0,21,13]], k = 4
+输出：[[12,0,21,13],[3,8,1,9],[19,7,2,5],[4,6,11,10]]
+```
+
+**示例2:**
+
+```
+输入：grid = [[1,2,3],[4,5,6],[7,8,9]], k = 9
+输出：[[1,2,3],[4,5,6],[7,8,9]]
+```
+
+**提示:**
+
+- 1 <= grid.length <= 50
+- 1 <= grid[i].length <= 50
+- -1000 <= grid[i][j] <= 1000
+- 0 <= k <= 100
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public List<List<Integer>> shiftGrid(int[][] grid, int k) {
+        List<List<Integer>> ans = new ArrayList<>();
+        List<Integer> list = new ArrayList<>();
+        int len = grid.length;
+        int clen = grid[0].length;
+        // 算出最小移动次数
+        k = k % (len * clen);
+        // 等于0时, 直接转换list
+        if(k == 0){
+            for(int i=0; i<len; i++){
+                list = new ArrayList<>();
+                for(int j=0; j<clen; j++){
+                    list.add(grid[i][j]);
+                }
+                ans.add(list);
+            }
+            return ans;
+        }
+        int[] tmp = getTmp(grid, k);
+        // 将取出的后面的数字, 加入到list的前面
+        for(int i=k-1; i>=0; i--){
+            if(list.size() == clen){
+                ans.add(list);
+                list = new ArrayList<>();
+            }
+            list.add(tmp[i]);
+        }
+		// 再将剩余的填充
+        for(int i=0; i<len; i++){
+            if(ans.size() == len){
+                return ans;
+            }
+            for(int j=0; j<clen; j++){
+                if(list.size() == clen){
+                    ans.add(list);
+                    list = new ArrayList<>();
+                }
+                list.add(grid[i][j]);
+            }
+        }
+        return ans;
+    }
+    // 从后向前取出, 要移动到前面的数字
+    public int[] getTmp(int[][] grid, int k){
+        int[] tmp = new int[k];
+        int start = 0;
+        for(int i=grid.length-1; i>=0; i--){
+            for(int j=grid[i].length-1; j>=0; j--){
+                tmp[start++] = grid[i][j];
+                if(start == k){
+                    return tmp;
+                }
+            }
+        }
+        return tmp;
+    }
+}
+```
+
+## 58.[[1266. 访问所有点的最小时间](https://leetcode-cn.com/problems/minimum-time-visiting-all-points/)]
+
+**描述**
+
+平面上有 n 个点，点的位置用整数坐标表示 points[i] = [xi, yi]。请你计算访问所有这些点需要的最小时间（以秒为单位）。
+
+你可以按照下面的规则在平面上移动：
+
+- 每一秒沿水平或者竖直方向移动一个单位长度，或者跨过对角线（可以看作在一秒内向水平和竖直方向各移动一个单位长度）。
+- 必须按照数组中出现的顺序来访问这些点。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：points = [[1,1],[3,4],[-1,0]]
+输出：7
+解释：一条最佳的访问路径是： [1,1] -> [2,2] -> [3,3] -> [3,4] -> [2,3] -> [1,2] -> [0,1] -> [-1,0]   
+从 [1,1] 到 [3,4] 需要 3 秒 
+从 [3,4] 到 [-1,0] 需要 4 秒
+一共需要 7 秒
+```
+
+**示例2:**
+
+```
+输入：points = [[3,2],[-2,2]]
+输出：5
+```
+
+**提示:**
+
+- points.length == n
+- 1 <= n <= 100
+- points[i].length == 2
+- -1000 <= points[i][0], points[i][1] <= 1000
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 取两个点 Math.max(x1-x0,y1-y0);
+    public int minTimeToVisitAllPoints(int[][] points) {
+        int seconds = 0;
+        for(int i=1; i<points.length; i++){
+            seconds += Math.max(Math.abs(points[i][0]-points[i-1][0]), Math.abs(points[i][1]-points[i-1][1]));
+        }
+        return seconds;
+    }
+}
+```
+
+## 59.[[1275. 找出井字棋的获胜者](https://leetcode-cn.com/problems/find-winner-on-a-tic-tac-toe-game/)]
+
+**描述**
+
+A 和 B 在一个 3 x 3 的网格上玩井字棋。
+
+井字棋游戏的规则如下：
+
+- 玩家轮流将棋子放在空方格 (" ") 上。
+- 第一个玩家 A 总是用 "X" 作为棋子，而第二个玩家 B 总是用 "O" 作为棋子。
+- "X" 和 "O" 只能放在空方格中，而不能放在已经被占用的方格上。
+- 只要有 3 个相同的（非空）棋子排成一条直线（行、列、对角线）时，游戏结束。
+- 如果所有方块都放满棋子（不为空），游戏也会结束。
+- 游戏结束后，棋子无法再进行任何移动。
+
+给你一个数组 moves，其中每个元素是大小为 2 的另一个数组（元素分别对应网格的行和列），它按照 A 和 B 的行动顺序（先 A 后 B）记录了两人各自的棋子位置。
+
+如果游戏存在获胜者（A 或 B），就返回该游戏的获胜者；如果游戏以平局结束，则返回 "Draw"；如果仍会有行动（游戏未结束），则返回 "Pending"。
+
+你可以假设 moves 都 有效（遵循井字棋规则），网格最初是空的，A 将先行动。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：moves = [[0,0],[2,0],[1,1],[2,1],[2,2]]
+输出："A"
+解释："A" 获胜，他总是先走。
+"X  "    "X  "    "X  "    "X  "    "X  "
+"   " -> "   " -> " X " -> " X " -> " X "
+"   "    "O  "    "O  "    "OO "    "OOX"
+```
+
+**示例2:**
+
+```
+输入：moves = [[0,0],[1,1],[0,1],[0,2],[1,0],[2,0]]
+输出："B"
+解释："B" 获胜。
+"X  "    "X  "    "XX "    "XXO"    "XXO"    "XXO"
+"   " -> " O " -> " O " -> " O " -> "XO " -> "XO " 
+"   "    "   "    "   "    "   "    "   "    "O  "
+```
+
+**示例3:**
+
+```
+输入：moves = [[0,0],[1,1],[2,0],[1,0],[1,2],[2,1],[0,1],[0,2],[2,2]]
+输出："Draw"
+输出：由于没有办法再行动，游戏以平局结束。
+"XXO"
+"OOX"
+"XOX"
+```
+
+**示例4:**
+
+```
+输入：moves = [[0,0],[1,1]]
+输出："Pending"
+解释：游戏还没有结束。
+"X  "
+" O "
+"   "
+```
+
+
+
+**提示:**
+
+- points.length == n
+- 1 <= n <= 100
+- points[i].length == 2
+- -1000 <= points[i][0], points[i][1] <= 1000
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String tictactoe(int[][] moves) {
+        int m = moves.length;
+        // 用数组记录0-2行、0-2列、正对角线、副对角线是否已满3个棋子
+        // count[0-2]对应0-2行、count[3-5]对应0-2列、count[6]对应正对角线、count[7]对应副对角线
+        int[] count = new int[8];
+        // 只需考虑最后一个落棋的人, 最后落棋的人才有可能胜利
+        // 倒序统计此人走棋情况
+        for(int i = m - 1; i >= 0; i -= 2) {
+            // 此棋对行的影响
+            count[moves[i][0]]++;
+            // 此棋对列的影响
+            count[moves[i][1] + 3]++;	
+            // 此棋对正对角线的影响
+            if(moves[i][0] == moves[i][1])
+                count[6]++;
+            // 此棋对副对角线的影响 (
+            // 此处为3x3的情况，其余大小的棋盘可以类推
+            if(moves[i][0] + moves[i][1] == 2)
+                count[7]++;
+            // 满3个棋子则胜利
+            if(count[moves[i][0]] == 3 || count[moves[i][1] + 3] == 3 || 
+                    count[6] == 3 || count[7] == 3) 
+                // A先B后 则总长度为偶时 最后为B 反之为A
+                return m % 2 == 0 ? "B" : "A";	
+            }
+        // 未胜时，棋盘未下满则继续
+        if(moves.length < 9)
+            return "Pending";
+        // 未胜时，棋盘下满则平局结束
+        return "Draw";
+    }
+}
+```
+
+## 60.[[1287. 有序数组中出现次数超过25%的元素](https://leetcode-cn.com/problems/element-appearing-more-than-25-in-sorted-array/)]
+
+**描述**
+
+给你一个非递减的 **有序** 整数数组，已知这个数组中恰好有一个整数，它的出现次数超过数组元素总数的 25%。
+
+请你找到并返回这个整数
+
+**示例**
+
+**示例 1：**
+
+```
+输入：arr = [1,2,2,6,6,6,6,7,10]
+输出：6
+```
+
+**提示:**
+
+- `1 <= arr.length <= 10^4`
+- `0 <= arr[i] <= 10^5`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int findSpecialInteger(int[] arr) {
+        // 只需比较当前数和  +1/4位置的数
+        int target = arr.length / 4;
+        for(int i=0; i<arr.length-target; i++){
+            if(arr[i] == arr[i+target]){
+                return arr[i];
+            }
+        }
+        return -1;
+    }
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
